trunk/Archive2/df/0da173d403b357/output
main.cpp: In function 'bool addTask()':
main.cpp:4:5: error: 'fdfgfdfgfggf' was not declared in this scope
     fdfgfdfgfggf
     ^
main.cpp:6:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
